--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
